@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-05T12:43:56Z",
+  "timestamp" : "2025-04-07T02:00:23Z",
   "count_outdated" : 5299,
   "uniques_outdated" : 1029,
-  "count" : 5338,
-  "uniques" : 1041,
+  "count" : 5344,
+  "uniques" : 1042,
   "views" : [
     {
       "timestamp": "2025-03-24T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-04-06T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
